# ci-cd_pipeline_finetuning

./: .gitignore  pyproject.toml
.github/workflows/: ci.yaml  train_dispatch.yaml
configs/: configs.yaml
configs/dataset/: dental_v1.yaml
configs/infra/: colab_a100.yaml  colab_t4.yaml  dgx_spark.yaml  h100_cluster.yaml  local.yaml
configs/model/: gemma4_31b_it.yaml  gemma4_e2b_it.yaml  gemma4_e4b_it.yaml  medmo_4b.yaml  qwen3_8b.yaml
configs/peft/: dora.yaml  lora.yaml
configs/stage/: dpo.yaml  sft.yaml
configs/tracking/: mlflow_dgx.yaml  mlflow_local.yaml
docs/: RUNBOOK.md
scripts/: run_sft_local.sh  run_sft_remote.sh
src/velodoc_llm_train.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/velodoc_train/: cli.py  sft_train.py
src/velodoc_train/data/: jsonl_loader.py  registry.py  tokenize.py
src/velodoc_train/models/: build.py  peft.py
src/velodoc_train/tracking/: artifacts.py  mlflow_utils.py  summaries.py
src/velodoc_train/training/: distributed.py
src/velodoc_train/utils/: config_validation.py  env.py  git.py  seed.py
